Fix File Size Issues

--- a/cookie.html
+++ b/cookie.html
@@ -56,12 +56,40 @@
 				<div class="form-group">
 					 
             <div> <label for="cookieCutterSize">
-						Cookie Cutter Size
+					Size
 					</label></div>
           <input id="cookieSize"  type="text"  data-slider-ticks="[2, 2.5, 3, 3.5, 4]" data-slider-ticks-snap-bounds=".1" precision=2 data-slider-ticks-labels='["2in", "2.5in", "3in", "3.5in", "4in"]'/>
 
-       
+		<div> <label for="cookieCutterThickness">
+			Thickness
+		</label></div>
+			<select id="cookieCutterThickness">
+				<option value=.7>Extra Thin (.7mm)</option>
+				<option value=1 selected="selected">Thin (1mm)</option>
+				<option value=1.3 >Medium Thin (1.3mm)</option>
+				<option value=1.6>Thick (1.6mm)</option>
+				<option value=2>Very Thick (2mm) </option>
+			</select>
 
+		<div> <label for="cookieCutterDepth">
+			Depth
+		</label></div>
+			<select id="cookieCutterDepth">
+				<option value=12 >Shallow (12mm)</option>
+				<option value=16 selected="selected">Standard (16mm)</option>
+				<option value=20 >Deep (20mm)</option>
+			</select>
+
+		  <div> <label for="cookieTolerance">
+			File Size
+		</label></div>
+			<select id="cookieTolerance">
+				<option value=.01>Very High</option>
+				<option value=.15 selected="selected">High</option>
+				<option value=.3 >Medium</option>
+				<option value=.7>Low</option>
+				<option value=2>Very Low</option>
+			</select>
 
 				</div>
 				<button type="submit"  id="exportASCII" class="btn btn-primary">
