--- a/cookie.html
+++ b/cookie.html
@@ -29,7 +29,7 @@
 	<div class="row">
 		<div class="col-md-8">
 		  <div class="inputoutput">
-    <img id="imageSrc" alt="No Image" hidden=true/>
+    <img id="imageSrc" crossOrigin="" alt="No Image" hidden=true/>
        <h5>
 				Select an image to get started!
       </h5>
