Added Some Styling
Added Some Styling Needs Alot More

--- a/cookie.html
+++ b/cookie.html
@@ -27,6 +27,14 @@
 			color: white;
 			font-family: monospace;
 		}
+		
+		body {
+			background-image: url(images/background.png);
+			background-color: #fff2f2;
+		    background-repeat: no-repeat;
+		    background-size: cover;
+		}
+
 	</style>
 
   </head>
@@ -47,7 +55,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-8">
+		<div class="col-md-6">
 		  <div class="inputoutput">
     <img id="imageSrc" crossOrigin="" alt="No Image" hidden=true/>
        <h5>
@@ -60,7 +68,7 @@
   </div>
 		 <canvas id="canvasOutput" ></canvas>
 		</div>
-		<div class="col-md-4 float-md-left">
+		<div class="col-md-3 float-md-left">
 			<div class="row">
 				<div class="col-md-12">
               <h5>
