--- a/cookie.html
+++ b/cookie.html
@@ -24,89 +24,29 @@
 	<clipart-selector>
 		<img name="image" id="imageSrc" />
 	</clipart-selector>
+	<div class="canvasContainer">
 	<canvas id="canvasOutput"></canvas>
-
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-8">
-			</div>
-			<div class="col-md-4">
-				<div class="row">
-					<div class="col-md-12">
-						<h5>
-							3D Preview
-						</h5>
-						<div class="border border-dark mw-100 mh-100" id="threeoutput" width="300px" height="300px"
-							border-width="thick" border-color="coral" \>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<form role="form">
-							<div class="form-group">
-
-								<div> 
-									<!-- <label for="cookieCutterSize">
-										Size
-									</label></div>
-								<input id="cookieSize" type="text" data-slider-ticks="[2, 2.5, 3, 3.5, 4]"
-									data-slider-ticks-snap-bounds=".1" precision=2
-									data-slider-ticks-labels='["2in", "2.5in", "3in", "3.5in", "4in"]' /> -->
-
-									<cookie-size></cookie-size>
-								<div> <label for="cookieCutterThickness">
-										Thickness
-									</label></div>
-								<select id="cookieCutterThickness">
-									<option value=.7>Extra Thin (.7mm)</option>
-									<option value=1 selected="selected">Thin (1mm)</option>
-									<option value=1.3>Medium Thin (1.3mm)</option>
-									<option value=1.6>Thick (1.6mm)</option>
-									<option value=2>Very Thick (2mm) </option>
-								</select>
-
-
-								<div> <label for="cookieCutterDepth">
-										Depth
-									</label></div>
-								<select id="cookieCutterDepth">
-									<option value=12>Shallow (12mm)</option>
-									<option value=16 selected="selected">Standard (16mm)</option>
-									<option value=20>Deep (20mm)</option>
-								</select>
-
-								<div> <label for="cookieTolerance">
-										File Size
-									</label></div>
-								<select id="cookieTolerance">
-									<option value=.01>Very High</option>
-									<option value=.15 selected="selected">High</option>
-									<option value=.3>Medium</option>
-									<option value=.7>Low</option>
-									<option value=2>Very Low</option>
-								</select>
-
-							</div>
-							<button type="submit" id="exportASCII" class="btn btn-primary">
-								Download STL
-							</button>
-						</form>
-					</div>
-
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-					</div>
-				</div>
-			</div>
-		</div>
+	
+	<!-- <preview-3d id="threeoutput"></preview-3d> -->
+	
+	<h5>
+		3D Preview
+	</h5>
+	<div id="threeoutput" border-width="thick"
+	border-color="coral">
 	</div>
+	</div>
+	<cookie-size></cookie-size>
+	<cookie-inputs id="cookie-inputs"></cookie-inputs>
 
+	<button type="submit" id="exportASCII" class="btn btn-primary">
+		Download STL
+	</button>
+
+	<script src="js/constants.js"></script>
 	<script src="js/three.min.js"></script>
 	<script src="js/OrbitControls.js"></script>
 	<script src="js/STLExporter.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/bootstrap-slider.min.js"></script>
 	<script src="js/cookie.js"></script>
 
 	<script type="module" src="js/index.js"></script>
