--- a/cookie.html
+++ b/cookie.html
@@ -35,9 +35,12 @@
 	<div id="threeoutput" border-width="thick"
 	border-color="coral">
 	</div>
+	<div>
+
+		<cookie-size></cookie-size>
+		<cookie-inputs id="cookie-inputs"></cookie-inputs>
 	</div>
-	<cookie-size></cookie-size>
-	<cookie-inputs id="cookie-inputs"></cookie-inputs>
+	</div>
 
 	<button type="submit" id="exportASCII" class="btn btn-primary">
 		Download STL
