minor style changes

--- a/cookie.html
+++ b/cookie.html
@@ -25,21 +25,16 @@
 		<img name="image" id="imageSrc" />
 	</clipart-selector>
 	<div class="canvasContainer">
-	<canvas id="canvasOutput"></canvas>
-	
-	<!-- <preview-3d id="threeoutput"></preview-3d> -->
-	
-	<h5>
-		3D Preview
-	</h5>
-	<div id="threeoutput" border-width="thick"
-	border-color="coral">
-	</div>
-	<div>
+		<canvas id="canvasOutput"></canvas>
+		<div>
 
-		<cookie-size></cookie-size>
-		<cookie-inputs id="cookie-inputs"></cookie-inputs>
-	</div>
+			<cookie-size></cookie-size>
+			<cookie-inputs id="cookie-inputs"></cookie-inputs>
+		</div>
+
+		<div id="threeoutput" border-width="thick" border-color="coral">
+			<!-- placeholder for threejs output -->
+		</div>
 	</div>
 
 	<button type="submit" id="exportASCII" class="btn btn-primary">
