adding rollup bundler

--- a/cookie.html
+++ b/cookie.html
@@ -47,8 +47,7 @@
 	<script src="js/STLExporter.js"></script>
 	<script src="js/cookie.js"></script>
 
-	<script type="module" src="js/index.js"></script>
-
+	<script type="module" src="bundled.js"></script>
 
 
 	<script async src="js/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
