--- a/cookie.html
+++ b/cookie.html
@@ -18,30 +18,36 @@
 </head>
 
 <body>
-	<title-card></title-card>
 	<camera-debug id="cameraDebug"></camera-debug>
+	
+	<title-card></title-card>
 
-	<clipart-selector>
-		<img name="image" id="imageSrc" />
-	</clipart-selector>
-	<div class="canvasContainer">
+	<grid-container>
+		<user-tip>
+			<h5> Select an image to get started! </h5>
+			<p> Try using a cartoon or clipart with a uniform background </p>
+		</user-tip>
+
+		<clipart-selector>
+			<img name="image" id="imageSrc" />
+		</clipart-selector>
 		<canvas id="canvasOutput"></canvas>
-		<div>
-
+		<input-container>				
 			<cookie-size></cookie-size>
 			<cookie-inputs id="cookie-inputs"></cookie-inputs>
-		</div>
-
+		</input-container>
+		
 		<div id="threeoutput" border-width="thick" border-color="coral">
 			<!-- placeholder for threejs output -->
 		</div>
-	</div>
 
-
-	<button type="submit" id="exportASCII" class="btn btn-primary">
-		Download STL
-	</button>
-
+		<download-btn-container>
+			<button type="submit" id="exportASCII" class="btn btn-primary">
+				Download STL
+			</button>
+		</download-btn-container>
+	</grid-container>
+		
 	<script src="js/constants.js"></script>
 	<script src="js/three.min.js"></script>
 	<script src="js/OrbitControls.js"></script>
