Minor Text Tweaks

--- a/cookie.html
+++ b/cookie.html
@@ -23,10 +23,10 @@
 	<title-card></title-card>
 
 	<grid-container>
-		<user-tip>
+		<!--  <user-tip>
 			<h5> Select an image to get started! </h5>
 			<p> Try using a cartoon or clipart with a uniform background </p>
-		</user-tip>
+		</user-tip> -->
 
 		<clipart-selector>
 			<img name="image" id="imageSrc" />
