--- a/cookie.html
+++ b/cookie.html
@@ -11,54 +11,29 @@
 	<meta name="description" content="Generating Cookie Cutter STL files for 3D printing">
 	<meta name="author" content="SchreiverJ">
 
-	<link href="css/style.css" rel="stylesheet">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.min.css"
-		rel="stylesheet">
-
+	<style>
+		body {
+			background: aliceblue
+		}
+	</style>
 </head>
 
 <body>
-	<camera-debug id="cameraDebug"></camera-debug>
-	
-	<title-card></title-card>
 
-	<grid-container>
-		<!--  <user-tip>
-			<h5> Select an image to get started! </h5>
-			<p> Try using a cartoon or clipart with a uniform background </p>
-		</user-tip> -->
-
-		<clipart-selector>
-			<img name="image" id="imageSrc" />
-		</clipart-selector>
-		<canvas id="canvasOutput"></canvas>
-		<input-container>				
-			<cookie-size></cookie-size>
-			<cookie-inputs id="cookie-inputs"></cookie-inputs>
-		</input-container>
-		
-		<div id="threeoutput" border-width="thick" border-color="coral">
-			<!-- placeholder for threejs output -->
-		</div>
-
-		<download-btn-container>
-			<button type="submit" id="exportASCII" class="btn btn-primary">
-				Download STL
-			</button>
-		</download-btn-container>
-	</grid-container>
-		
-	<script src="js/constants.js"></script>
-	<script src="js/three.min.js"></script>
-	<script src="js/OrbitControls.js"></script>
-	<script src="js/STLExporter.js"></script>
-	<script src="js/cookie.js"></script>
-
-	<script type="module" src="bundled.js"></script>
+	<div id="cookie-cutter-app"></div>
 
 
-	<script async src="js/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script>
+	<script src="build/constants.js"></script>
+	<script type="module" src="build/index.js"></script>
+
+	<!-- 
+	<script src="build/three.min.js"></script>
+	<script src="build/OrbitControls.js"></script>
+	<script src="build/STLExporter.js"></script>
+	<script src="build/cookie.js"></script> -->
+	<!-- <script async src="js/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script> -->
 
 
 </body>
+
 </html>
