--- a/cookie.html
+++ b/cookie.html
@@ -11,9 +11,90 @@
 	<meta name="description" content="Generating Cookie Cutter STL files for 3D printing">
 	<meta name="author" content="SchreiverJ">
 
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
+
 	<style>
 		body {
-			background: aliceblue
+			background: aliceblue;
+			margin: 0;
+		}
+
+		:root {
+			--border-size: 0.125rem;
+			--duration: 250ms;
+			--ease: cubic-bezier(0.215, 0.61, 0.355, 1);
+			--font-family: monospace;
+			--color-primary: white;
+			--color-secondary: black;
+			--shadow: rgba(0, 0, 0, 0.1);
+			--space: 1rem;
+		}
+
+		body {
+			background-color: aliceblue;
+			margin: 0;
+		}
+
+		grid-container {
+			display: grid;
+			grid-template-columns: .5fr auto;
+			align-content: center;
+			grid-gap: 6rem;
+			padding: 2rem;
+		}
+
+		canvas-container {
+			display: grid;
+		}
+
+		title-card {
+			display: grid;
+			align-content: center;
+			text-align: center;
+			grid-column-start: 1;
+			grid-column-end: 4;
+			width: 100vw;
+			background-color: lightslategray;
+		}
+
+		user-tip {
+			grid-column-start: 1;
+			grid-column-end: 4;
+		}
+
+		input-container {
+			grid-column-start: 1;
+			display: grid;
+			align-content: center;
+		}
+
+		clipart-selector {
+			display: grid;
+			grid-column-start: 1;
+		}
+
+		.canvasContainer {
+			align-items: center;
+		}
+
+		download-btn-container {
+			display: grid;
+			align-content: center;
+		}
+
+		canvas {
+			box-shadow: 2px 2px 39px -14px;
+		}
+
+		#imageSrc {
+			height: 1000px;
+			width: 1000px;
+		}
+
+		#threeoutput {
+			min-width: 400px;
 		}
 	</style>
 </head>
@@ -22,17 +103,7 @@
 
 	<div id="cookie-cutter-app"></div>
 
-
-	<script src="build/constants.js"></script>
-	<script type="module" src="build/index.js"></script>
-
-	<!-- 
-	<script src="build/three.min.js"></script>
-	<script src="build/OrbitControls.js"></script>
-	<script src="build/STLExporter.js"></script>
-	<script src="build/cookie.js"></script> -->
-	<!-- <script async src="js/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script> -->
-
+	<script type="module" src="bundle.js"></script>
 
 </body>
 
